grammar.bnf
<block>     ::= (<assign>)* (<func_call>)*

<assign>    ::= <ident> "=" <expr>
<expr>      ::= <term> "+" <expr> | <term> "-" <expr> | <term>
<term>      ::= <factor> "*" <term> | <factor> "/" <term> | <factor>
<factor>    ::= NUMBER | <ident> | "(" <expr> ")" | <func_call>

<func_call> ::= <ident> "(" <arg> ("," <arg>)* ")"
<arg>       ::= <expr> | <string>

<string>    ::= " STRING "
<ident>     ::= STRING
